package com.vms.enums;

public enum FuelType {

    PETROL,
    DIESEL,
    ELECTRIC,
    HYBRID,
    CNG,
    LPG

}
