package com.vms.enums;

public enum Gender {
    MALE,
    FEMALE,
    OTHER
}
