package com.vms.enums;

public enum Role {

    DRIVER,
    MANAGER
}
