package com.vms.enums;

public enum TripStatus {
    SCHEDULED,
    STARTED,
    COMPLETED,
    IN_PROGRESS,
    CANCELLED
}
