package com.vms.enums;

public enum TruckType {

    LIGHT_DUTY,
    MEDIUM_DUTY,
    HEAVY_DUTY,
    FLATBED,
    TANKER,
    REFRIGERATED,
    DUMP_TRUCK,
    CONTAINER
}
