package com.vms.enums;

public enum VehicleStatus {

    AVAILABLE,
    INACTIVE,
    MAINTENANCE,
    ASSIGNED

}
